// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/theme-builder creating a proper theme childItemTheme should match snapshot 1`] = `
Object {
  "default": Object {
    "text": "#BF2600",
  },
  "hover": Object {
    "background": "#BF2600",
    "secondaryText": "#EBECF0",
    "text": "#FFFFFF",
  },
}
`;

exports[`utils/theme-builder creating a proper theme itemTheme should match snapshot 1`] = `
Object {
  "default": Object {
    "background": "#BF2600",
    "secondaryText": "#FF7452",
    "text": "#BF2600",
  },
  "hover": Object {
    "secondaryText": "#EBECF0",
    "text": "#FFFFFF",
  },
}
`;

exports[`utils/theme-builder should not require all the props 1`] = `
Object {
  "default": Object {
    "background": "green",
    "secondaryText": "gray",
    "text": "white",
  },
  "hover": Object {
    "background": "blue",
    "secondaryText": "gray",
    "text": "yellow",
  },
}
`;

exports[`utils/theme-builder should not require all the props 2`] = `
Object {
  "default": Object {
    "background": "green",
    "secondaryText": "gray",
    "text": "white",
  },
  "hover": Object {
    "background": "blue",
    "secondaryText": "gray",
    "text": "yellow",
  },
}
`;
